[package]
name = "fractional-period"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "fractional_period"
path = "src/lib.rs"

[[bin]]
name = "binary"
path = "src/main.rs"

[dependencies]
#time-complexity-plot = { git = "https://github.com/ADS-laboratory/time-complexity-plot", branch = "main" }
time-complexity-plot = { path = "../time-complexity-plot", features = ["debug"]}
rand = "0.8.5"