[package]
name = "fractional-period"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "fractional_period"
path = "src/lib.rs"

[dependencies]
chrono-probe = { git = "https://github.com/ADS-laboratory/chrono-probe", branch = "main", features = ["debug"] }
plotters = "0.3.4"
rand = "0.8.5"